src/objects/collect__Loan_Payment_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>collect__Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Dev_Contract__c</fullName>
        <label>Dev Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions (Dev Contract)</relationshipLabel>
        <relationshipName>Contract_Payment_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>collect__Excess__c</fullName>
        <label>Excess</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Fees__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Interest__c</fullName>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loa Account</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Principal__c</fullName>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Loan Payment Transaction</label>
    <nameField>
        <label>Loan Payment Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>